--- a/Final Project Working Folder/Analysis.qmd
+++ b/Final Project Working Folder/Analysis.qmd
@@ -8,11 +8,31 @@ execute:
 ---
 
 ```{r}
+#| eval: false 
 #| results: hide
 #| include: false 
 path_main_folder = substr(getwd(), 1, nchar(getwd()) - nchar("Final Project Working Folder"))
 
 source(paste0(path_main_folder, "Master Packages.R"))
+
+```
+
+```{R read in packges} 
+#| results: hide
+#| include: false 
+
+library(tableone)
+library(sjPlot)
+library(rms)
+library(kableExtra)
+library(gridExtra)
+library(ggeffects)
+library(car)
+library(broom) # For converting model results into data frame
+library(geepack)
+library(emmeans)
+library(lme4)
+library(tidyverse)
 
 ```
 
@@ -91,6 +111,8 @@ table1_for_kable %>%
 
 ```
 
+
+
 ```{r }
 #| label: fig-prim-outliers-plot-2
 #| eval: false 
@@ -116,8 +138,13 @@ grid.arrange(
 
 ```
 
+
+
 ```{r not-evaluated primary and secondary model development steps }
 #| eval: false 
+
+curran %>% select(momage, kidage, kidagetv,homecog, homeemo, occasion, anti, read) %>% na.omit() %>% cor() %>% round(., 2)
+# use kidage at baseline and not time variant age die to collinearity issues. 
 
 fullest_model_time_v1 <- 
   geeglm(read ~ (homecog + homeemo + kidgen + kidage + occasion)^2, 
@@ -176,7 +203,7 @@ write_rds(primary_analysis_model, "primary model.rds")
 
 
 fullest_model_time_v1 <- 
-  geeglm(anti ~ (homecog + homeemo + kidgen + kidage + occasion)^2, 
+  geeglm(anti ~ (homecog + homeemo + kidgen + kidagetv + occasion)^2, 
        data = curran, 
        id = id, 
        corstr = "exchangeable", 
@@ -256,13 +283,14 @@ primary_analysis_model %>% tidy(conf.int = TRUE)  %>%
                 round(conf.low, 2), 
                 ", ", 
                 round(conf.high, 2), 
-                ")")
+                ")"), 
+    signif = ifelse(p.value <= 0.05, "*", '')
   )  %>% 
-  select(term_new, estimate, ci, p.value) %>% 
+  select(term_new, estimate, ci, p.value, signif) %>% 
   kable(digits = 2, 
         linesep = "\\addlinespace", 
         align = c('l', 'c', 'c', 'c'), 
-        col.names = c("Model Term", "Estimate", "95% CI", "P-value"), 
+        col.names = c("Model Term", "Estimate", "95% CI", "P-value", "Significance"), 
         booktabs = T) %>% 
   kable_styling(
     latex_options = c("striped", "hover", "condensed", "HOLD_position")
@@ -306,8 +334,8 @@ We further investigated the main and interaction effects of age, time, emotional
 ```{r}
 #| label: fig-effect-time-by-age
 #| fig-cap: "Blank"
-#| fig-height: 3
-#| fig-width: 5
+#| fig-height: 5
+#| fig-width: 7
 #| 
 # main effect main model for interactions 
 
@@ -435,6 +463,8 @@ grid.arrange(p_left, p_right, nrow = 1)
 
 ### Antisocial Scores 
 
+As a secondary outcome, we assessed the impact of emotional and cognitive stimulation at home at baseline using Gaussian GEE model with exchangeable correlation structure. The results are presented in @tbl-sec-model-est. We have found no evidence that change in emotional stimulation scores (P = 0.58), cognitive stimulation (0.89) are statistically related to change in the antisocial behavior scores. Additionally, there is no evidence that the effect of cognitive scores varies at difference levels of emotional scores (P = 0.36), and vice versa. 
+
 ```{r secondary outcome model }
 #| label: tbl-sec-model-est
 #| tbl-cap: "Gaussian GEE Main Effects on Antisocial Behavioral Score" 
@@ -456,13 +486,14 @@ secondary_analysis_model %>% tidy(conf.int = TRUE)  %>%
                 round(conf.low, 2), 
                 ", ", 
                 round(conf.high, 2), 
-                ")")
+                ")"), 
+    signif = ifelse(p.value <= 0.05, "*", '')
   )  %>% 
-  select(term_new, estimate, ci, p.value) %>% 
+  select(term_new, estimate, ci, p.value, signif) %>% 
   kable(digits = 2, 
         linesep = "\\addlinespace", 
         align = c('l', 'c', 'c', 'c'), 
-        col.names = c("Model Term", "Estimate", "95% CI", "P-value"), 
+        col.names = c("Model Term", "Estimate", "95% CI", "P-value", "Significance"), 
         booktabs = T) %>%
   kable_styling(
     latex_options = c("striped", "hover", "condensed", "HOLD_position")
@@ -473,9 +504,66 @@ secondary_analysis_model %>% tidy(conf.int = TRUE)  %>%
 
 ```
 
+Antisocial behavior scores are a measure on the scale from 0 to 10, with 0 representing the lowest possible score. 
+We found that one unit increase in the emotional stimulation score was associated with an expected decrease of antisocial 
+score by 0.06 point (-0.28 to 015 95% confidence interval), after adjusting for other predictors. We estimate that one unit increase in cognitive scores resulted in 0.02 points (-0.21 to 0.24 95% confidence interval) increase in antisocial scores, after adjusting for other variables. Both estimates show a weak effect of two predictors on the antisocial score, with no statistical evidence of strong association. @tbl-sec-model-est presents other predictors that have stronger effects that help explain variability in the antisocial scores. 
+
+Similarly to the reading score analysis, followup time period, age of a child at baseline and their interaction were strong predictors of antisocial behavior change and development. @fig-effect-time-by-age-sec present marginal effects of follow up 
+times on antisocial scores for children with varying baseline ages. It appears that, on average, younger children had lower 
+baseline antisocial scores, which grew at steeper rate over the course of six years. In contrast, oldest children 
+at baseline had approximately 25% higher antisocial scores, which did not change greatly over time. 
+
+```{r non evaluated calculator for slopes }
+#| eval: false 
+
+summary(secondary_analysis_model)
+vcov(secondary_analysis_model)
+
+slope_time_age <- function(x){(1.07475 + (-0.13655)*x) %>% round(., 2)}
+sd_time_age <- function(x){sqrt(0.1733453 + 3.588e-03*x^2 + 2 * x * (-0.0248406)) %>% round(., 2)}
+
+t <- 6
+slope_time_age(t) 
+slope_time_age(t) - 1.96 * sd_time_age(t)
+slope_time_age(t) + 1.96 * sd_time_age(t)
+
+t <- 7
+slope_time_age(t) 
+slope_time_age(t) - 1.96 * sd_time_age(t)
+slope_time_age(t) + 1.96 * sd_time_age(t)
+
+t <- 8
+slope_time_age(t) 
+slope_time_age(t) - 1.96 * sd_time_age(t)
+slope_time_age(t) + 1.96 * sd_time_age(t)
+
+```
+
+In particular, for children aged 6 years old at baseline, the average change in antisocial scores at each additional follow up time was 0.26, bounded by (0.12 to 0.39 95% confidence interval). For children aged 7 years old, similar average change was smaller, estimated at 0.12 units change, bounded by the (0.04 to 0.19) confidence interval. For children who were 8 years old at baseline the average change was a slight decrease in antisocial scores, estimated at -0.02, bounded by (-0.15 to 0.11). This effect was close to zero, which is evident on @fig-effect-time-by-age-sec. All marginal effects are estimated after adjusting for other predictors. 
+
 ```{r}
+#| eval: false 
+
+# sanity check for marginal effects 
+
+curran %>% 
+  ggplot(aes(x = occasion, y = anti)) + 
+    geom_smooth(method = 'loess', aes(group = as.factor(floor(kidage)), 
+                                      color = as.factor(floor(kidage)))
+    )
+
+curran %>% 
+  ggplot(aes(x = occasion, y = anti)) + 
+    geom_smooth(method = 'lm', aes(group = as.factor(floor(kidage)), 
+                                      color = as.factor(floor(kidage)))
+    )
+```
+
+```{r}
+#| fig-height: 5
+#| fig-width: 7
 #| label: fig-effect-time-by-age-sec
-#| fig-cap: "25th Percentile: 6.3 Years old. 50h Percentile: 6.8 Years old. 75th Percentile: 7.5 Years old. "
+#| fig-cap: "Caption needed"
 #| 
 # main effect main model for interactions 
 
@@ -483,7 +571,7 @@ secondary_analysis_model %>% tidy(conf.int = TRUE)  %>%
 
 plot_model(model = secondary_analysis_model, 
            type = "eff", 
-           terms = c("occasion", "kidage [6.33, 6.83, 7.50]")) + 
+           terms = c("occasion", "kidage [6, 7, 8]")) + 
   theme_minimal() + 
   labs(x = "Follow Up Period", 
        y = "Antisocial Score", 
@@ -493,40 +581,7 @@ plot_model(model = secondary_analysis_model,
   ggtitle("Effect of Time on Antisocial Scores")
 ```
 
-```{r}
-#| label: fig-sec-effects-by-age
-#| fig-cap: "Values of Emotional and Cognitive Scores are chosen at 25th, 50th, and 75th sample percentiles" 
-#| fig-height: 6
-#| fig-width: 9
-# main effect main model for interactions 
+We also found an important effect of sex factor on the antisocial scores. During the model building and variable selection process we did not find significant interactions between sex and other predictors of antisocial scores. We estimated the marginal effect of sex for males at 0.86 (0.58 to 1.14 95% confidence interval) compared to females, after adjusting for other factors. This factor has no interaction with other predictors, we estimated constant differences between males and females in terms of their respective antisocial scores at all time points, while accounting for other variables. There is strong statistical evidence (P <0.001) that the average antisocial behavior score for males at all time is 0.86 points higher when compared to females. 
 
-# quantile(curran$homecog, c(0.25, 0.5, 0.75))
-
-plot_model(model = secondary_analysis_model, 
-           type = "eff", 
-           terms = c("occasion", "homecog [7, 9, 11]")) + 
-  theme_minimal() + 
-  labs(x = "Follow Up Period", 
-       y = "Antisocial Score", 
-       color = "Cognitive Stimulation Score") + 
-  ggtitle("") + 
-  theme(legend.position = "bottom", 
-        legend.text = element_text(size = 8)) -> p_left
-
-
-plot_model(model = secondary_analysis_model, 
-           type = "eff", 
-           terms = c("occasion", "homeemo [8, 10, 12]")) + 
-  theme_minimal() + 
-  labs(x = "Follow Up Period", 
-       y = "Antisocial Score", 
-       color = "Emotional Stimulation Score") + 
-  ggtitle("") + 
-  theme(legend.position = "bottom", 
-        legend.text = element_text(size = 8)) -> p_right
-
-grid.arrange(p_left, p_right, nrow = 1)
-
-```
 
 # Discussion 
